// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useRoutingProps() returns passed props and options for routing different than path 1`] = `
<body>
  <div>
    <div>
      {"routing":"virtual","prop1":"1","prop2":"2"}
    </div>
  </div>
</body>
`;

exports[`useRoutingProps() returns passed props and options if path is passed from routing options 1`] = `
<body>
  <div>
    <div>
      {"path":"/aloha","prop1":"1","prop2":"2"}
    </div>
  </div>
</body>
`;

exports[`useRoutingProps() returns path routing with passed props and options if path prop is passed 1`] = `
<body>
  <div>
    <div>
      {"path":"/aloha","prop1":"1","prop2":"2","routing":"path"}
    </div>
  </div>
</body>
`;
